@@ -4,5 +4,4 @@
 .. include:: data/table_rowspan.txt
 .. include:: data/table_complex.txt
 .. include:: data/list_table.txt
-.. include:: data/custom_roles.txt
 .. include:: data/errors.txt
